config-root/namespaces/jx/oauth2-proxy/oauth2-proxy-svc.yaml
# Source: oauth2-proxy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy
    chart: oauth2-proxy-5.0.3
    release: oauth2-proxy
    heritage: Helm
    gitops.jenkins-x.io/pipeline: 'namespaces'
  name: oauth2-proxy
  annotations:
    meta.helm.sh/release-name: 'oauth2-proxy'
  namespace: jx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: oauth2-proxy
    release: oauth2-proxy
